EPAD8-2647: Fix search bar display on mobile when hidden

--- a/services/drupal/web/themes/epa_theme/source/_patterns/04-layouts/header/_header.scss
+++ b/services/drupal/web/themes/epa_theme/source/_patterns/04-layouts/header/_header.scss
@@ -106,6 +106,10 @@ svg.l-header__search-button-icon-close {
   padding: rem(gesso-spacing(2)) rem(gesso-site-margins(mobile));
   transition-duration: 1ms;
 
+  &[hidden] {
+    display: none;
+  }
+
   form {
     flex-grow: 1;
   }
